<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Cook\'s list</string>
    <string name="main_menu_new_list">New List</string>
    <string name="main_menu_saved_lists">My Lists</string>
    <string name="tv_new_list_name">List Name</string>
    <string name="b_new_list_name_ok">Ok</string>
    <string name="b_new_list_name_cancel">Cancel</string>
    <string name="tv_main_list_name">List Name</string>
    <string name="tv_main_drop_zone"></string>
    <string name="tv_main_current_category">Current category</string>
    <string name="tv_main_add_category">add Category</string>
    <string name="tv_main_add_product">add Product</string>
    <string name="tv_main_add_product_name"></string>
    <string name="tv_default_quantity_values_one">1</string>
    <string name="tv_default_quantity_values_two">2</string>
    <string name="tv_default_quantity_values_three">3</string>
    <string name="tv_default_quantity_values_four">4</string>
    <string name="tv_default_quantity_values_keyboard">Other</string>
    <string name="tv_default_quantity_values_mes">add Quantity</string>
    <string name="tv_product_information_fragment_info">add Unit</string>
    <string name="tv_save_products_list_number_of_products">List has </string>
    <string name="tv_save_products_list_sum"></string>
    <string name="i_menu_go_to_list">List</string>
    <string name="i_menu_redy_list_send">Send</string>
    <string name="i_menu_redy_list_execute">Execute</string>
    <string name="i_menu_redy_list_edit">Edit</string>
    <string name="i_menu_save_list_delete_products">Delete</string>
    <string name="i_menu_save_list_save">Save</string>
    <string name="b_delete_list_products_ok">Ok</string>
    <string name="b_delete_list_products_cancel">Cancel</string>
    <string name="tv_saved_lists">My lists</string>
    <string name="tv_send_list_as_email_address">Send your list</string>
    <string name="tv_send_list_as_email_address_mess">Мessage:</string>
    <string name="b_send_list_as_email_ok">Ok</string>
    <string name="b_send_list_as_email_cancel">Cancel</string>
    <string name="tv_execute_list_sum">Total sum is</string>
    <string name="tv_execute_list_number_of_products">You have </string>
    <string name="tv_edit_list_product_brand">Brand/Variety</string>
    <string name="tv_edit_list_product_quantity">Quantity</string>
    <string name="tv_edit_list_product_units">Units</string>
    <string name="tv_edit_list_product_price">Price</string>
    <string name="tv_edit_list_product_currency">Currency</string>
    <string name="tv_add_new_category">New Category</string>
    <string name="tv_add_new_list_product_quantity">Quantity</string>
    <string name="tv_add_new_list_product_units">Units</string>
    <string name="tv_delete_product_row_layout_product">Product</string>
    <string name="tv_delete_product_row_layout_product_name">Product name</string>
    <string name="tv_delete_product_row_layout_quantity">Quantity</string>
    <string name="tv_delete_product_row_layout_price">Price</string>
    <string name="tv_delete_product_row_layout_unit">Unit</string>
    <string name="tv_execute_list_dialog_price">Price</string>
    <string name="tv_execute_product_row_layout_product">Product</string>
    <string name="tv_execute_product_row_layout_product_name">Product name</string>
    <string name="tv_execute_product_row_layout_quantity">Quantity</string>
    <string name="tv_execute_product_row_layout_price">Price</string>
    <string name="tv_execute_product_row_layout_unit">Unit</string>
    <string name="tv_execute_product_row_layout_currency">Currency</string>
    <string name="tv_product_row_layout_product">Product</string>
    <string name="tv_product_row_layout_product_name">Product name</string>
    <string name="tv_product_row_layout_quantity">Quantity</string>
    <string name="tv_product_row_layout_price">Price</string>
    <string name="tv_product_row_layout_unit">Unit</string>
    <string name="tv_product_row_layout_currency">Currency</string>
    <string name="kg">Kg</string>
    <string name="litr">Ltr</string>
    <string name="grams">Gr</string>
    <string name="mlitr">Mltr</string>
    <string name="pound">Lb</string>
    <string name="ounce">Oz</string>
    <string name="currency"></string>
    <string name="add_new_category_dialog">Add new category</string>
    <string name="toast_incorect_value">Please enter number for the field.</string>
    <string name="delete_list_products">Delete items</string>
    <string name="tv_add_list_product_fragment">hold and drag the Product here</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="add_brand_for_product">Add Brand/Variety</string>
    <string name="title_activity_admin_items">AdminItems</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="warnind_delete_items">All deleted items will be removed from the database.</string>
    <string name="delete_items">Choose what type of element you want to delete</string>
    <string name="deletion_mode_category">Delete Categories</string>
    <string name="deletion_mode_product">Delete Products</string>
    <string name="deletion_mode_product_name">Delete Brands/Variety</string>
    <string name="from"> from </string>
    <string name="delete_lists">Delete lists</string>
    <string name="main_menu">Main menu</string>
    <string name="keyboard">Keyboard</string>
    <string name="brand_variety">add Brand/Variety</string>
    <string name="add_brand_variety_dialog">Add brand/variety</string>
    <string name="add_product_dialog">Add product</string>
    <string name="add_category_dialog">Add category</string>
    <string name="edit_list_product_title">Edit list product</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="price">set Price</string>
    <string name="quantity">set Quantity</string>
    <string name="unit">set Unit</string>
    <string name="send_email">Send mail...</string>
    <string name="price_in_eamail">price</string>
    <string name="no_brands">No brands / varieties for that product.</string>
    <string name="none">None</string>
    <string name="store">Your Store</string>
    <string name="populate_db">Please wait to create your database...</string>
    <string name="loading">Loading...</string>
    <string name="version">Version 1.0</string>
    <string name="you_have">You have</string>
    <string name="lists">lists</string>
    <string name="list_have">List have</string>
    <string name="email_addr">Email:</string>
    <string name="current_product"></string>
</resources>
