<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="10dp"
        android:background="@color/sl_greysh"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/delete_items"
        />

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TextView
        android:id="@+id/tvSettingsDeleteLists"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="25"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/delete_lists"
        />

    <TextView
        android:id="@+id/tvSettingsDeleteCategory"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="25"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/deletion_mode_category"
        />

    <TextView
        android:id="@+id/tvSettingsDeleteProduct"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="25"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/deletion_mode_product"
        />

    <TextView
        android:id="@+id/tvSettingsDeleteProductName"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="25"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/deletion_mode_product_name"
        />
    </LinearLayout>
</LinearLayout>