<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/greysh"
            android:text="@string/tv_send_list_as_email_address"
            />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="left"
        android:textColor="@color/skyBlue"
        android:text="@string/email_addr"
        />
    <EditText
            android:id="@+id/etResiverEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="left"
        android:textColor="@color/skyBlue"
        android:text="@string/tv_send_list_as_email_address_mess"
        />
    <EditText
        android:id="@+id/etResiverEmailMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:weightSum="100"
            >
        <Button
                android:id="@+id/bCancelSendingEmail"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:text="@string/b_send_list_as_email_cancel"
                />
        <Button
                android:id="@+id/bSendEmail"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="50"
                android:text="@string/b_send_list_as_email_ok"
                />

    </LinearLayout>

</LinearLayout>